# C-Snippets

./: .gitignore  structInit.c
00.CodeAcademy/2022.04.26 - variables/: 02-glasses.c  03-jupiterYears.c  04-sumOfDigits.c  06-3num.c  07-numBetween2and12.c  14-checkTheOutput.c  (+7 more)
00.Codewars/: countOfPositivesSumOfNegatives.c  function3MultiplyingTwoNumbers.c  parseNiceIntFromCharProblem.c  plurals.c  volumeOfACuboid.c
00.Leetcode/: 0013.RomanToInteger.c  0020.ValidParentheses.c  0021.MergeTwoSortedLists.c  0027.RemoveElement.c  1.TwoSum.c
01.Solution with variables/: changingTheValuesOfTwoVariables.c  reversedNumber.c  sumOfTripleDigits.c
01.Solutions with variables/: distanceBetween2Points.c  printDateInHexadecimal.c
02.Solutions with conditional statements/: calculator.c  divisible3Numbers.c  doubleOrTripleDigits.c  evenOrOddNumber.c  findTheNextDay.c  quadrantOfAPoint.c  versionOfC.c
03.Solutions with loops/: addingPowToCalculator.c  evenDigitSumAndOddDigitSum.c  from1ToNumAndViceVersa.c  milionDolars.c  multiplicationTable.c  rightAngleTriangle.c  sumOfNumbersDividedBy3And5.c
04.Solutions with nested loops/: rightAngleTriangleVar2.c
05.Functions/: amountAndAverage.c  charsTo3Digits.c  derivative.c  function2.c  function3.c  isEven.c  isPerfect.c  maximumDigit.c  resetArrayElements.c  sumOfDivisors1.c  toUpperCase.c
06.Arrays/: goodNeighbors.c  lowestGrade.c  maxDigit.c  maxIndex.c  nonUniqueElements.c  palindrome.c  rotateLeftPart1.c  rotateRight.c  sumClosestToZero.c
07.2D Arrays/: multiplicationTable.c
08.Pointers/: 1.doublePointer.c  2.doublePointersTypedef.c  3.doublePointersStruct.c  addressAndValue.c  constChange.c  printArray.c  vectors.c
09.Strings/: strcmp.c  strcpy.c
10.Recursion/: ascendingDescending.c  countOfDigits.c  digitsEvenOccurences.c  evenOddFunc.c  findMin.c  lucasSequence.c  pellNumber.c  printingNto1AndViceVersa.c  printingOneToN.c  sequenceChar1AndChar2.c  sumOfDigits.c  sumOfEvenNumbers.c  totalCharacters.c  totalSmaller.c
11.Structure/: initializeAndPrintVariable.c  pointInitAndPrint.c  printNextDay.c  staticStructArray.c  typedef.c
Basics/00.Projects/S03-Ed-Edd-n-Eddy-main/: CMakeLists.txt
Basics/00.Projects/S03-Ed-Edd-n-Eddy-main/Counter-Strike_Project/: README.md
Basics/00.Projects/S03-Ed-Edd-n-Eddy-main/Counter-Strike_Project/helpers/include/: Defines.h
Basics/00.Projects/S03-Ed-Edd-n-Eddy-main/Counter-Strike_Project/include/: PlayerVitalData.h
Basics/00.Projects/S03-Ed-Edd-n-Eddy-main/Counter-Strike_Project/src/: Pistol.c  Player.c  PlayerVitalData.c
Basics/00.Projects/S03-Ed-Edd-n-Eddy-main/StarCraft_Project/: CMakeLists.txt
Basics/00.Projects/S03-Ed-Edd-n-Eddy-main/StarCraft_Project/include/: Defines.h  ProtossActions.h
Basics/00.Projects/S03-Ed-Edd-n-Eddy-main/StarCraft_Project/src/: BattleField.c  Vector.c
Basics/00.Projects/S03-Ed-Edd-n-Eddy-main/WarCraft_Project/: README.md
Basics/00.Projects/S03-Ed-Edd-n-Eddy-main/WarCraft_Project/include/: Actions.h  Arena.h  Defines.h  Hero.h
Basics/00.Projects/S03-Ed-Edd-n-Eddy-main/WarCraft_Project/src/: BonusAction.c  DrawRangerHero.c
Basics/00.Projects/S03-Ed-Edd-n-Eddy-main/cmake_helpers/: helpers_c.cmake
Leetcode/: 0001.TwoSum.c  0009.PalindromeNumber.c  0014.LongestCommonPrefix.c  0026.RemoveDuplicatesFromSortedArray.c
Projects/Counter-Strike_Project/: CMakeLists.txt
Projects/Counter-Strike_Project/helpers/: CMakeLists.txt
Projects/Counter-Strike_Project/helpers/include/: Messages.h  Validations.h
Projects/Counter-Strike_Project/helpers/src/: Messages.c  Validations.c
Projects/Counter-Strike_Project/include/: Action.h  BattleField.h  Pistol.h
Projects/Counter-Strike_Project/src/: Action.c  BattleField.c
Projects/WarCraft_Project/: CMakeLists.txt
Projects/WarCraft_Project/include/: BonusAction.h  DeathKnightHero.h  Messages.h
Projects/WarCraft_Project/src/: ArchMageHero.c  Arena.c  DeathKnightHero.c  Hero.c  Spell.c
(+807 files in other folders)
